# f3

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Pipfile  README.md  build.rs  gen-examples.sh  gen-peripherals.sh  index.html  openocd.gdb  plot.py  stm32f3discovery.ld  thumbv7em-none-eabihf.json
.cargo/: config
ci/: install.sh  run-docker.sh  run.sh  script.sh
ci/docker/thumbv7em-none-eabihf/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
examples/: _all-the-weak-symbols.rs  _test.rs  abort.rs  aio-concurrent.rs  aio-echo.rs  aio-i2c.rs  aio-periodic.rs  aio-sensors.rs  aio-spi.rs  alloc.rs  angle-meter.rs  blink.rs  blinky.rs  concurrency.rs  concurrent.rs  cooperative.rs  delay.rs  exception.rs  fpu.rs  gpio.rs  hello.rs  i2c-read-multi.rs  i2c-read-single.rs  interrupt.rs  itm.rs  l3gd20.rs  led-compass-1.rs  led-compass-2.rs  led-compass-3.rs  led-roulette.rs  led.rs  leds.rs  log-sensors.rs  loopback.rs  lsm303dlhc.rs  madgwick.rs  minimal.rs  override-default-exception-handler.rs  override-exception.rs  override-init.rs  (+15 more)
src/: alloc.rs  delay.rs  dma.rs  exception.rs  flash.rs  fpu.rs  frequency.rs  gpio.rs  i2c.rs  interrupt.rs  itm.rs  l3gd20.rs  lang_items.rs  led.rs  lib.rs  lsm303dlhc.rs  macros.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  time.rs  timeit.rs  timer.rs
src/examples/: _00_hello.rs  _01_itm.rs  _02_leds.rs  _03_blinky.rs  _04_roulette.rs  _05_serial.rs  _06_serial_echo.rs  _07_l3gd20.rs  _08_lsm303dlhc.rs  _09_cooperative.rs  _09_log_sensors.rs  _0_hello.rs  _10_madgwick.rs  _10_reactive_serial_echo.rs  _11_reactive_roulette.rs  _12_preemptive.rs  _13_log_sensors.rs  _14_madgwick.rs  _1_itm.rs  _2_led.rs  _3_blinky.rs  _4_roulette.rs  _5_loopback.rs  _6_concurrency.rs  _6_concurrent.rs  _7_resource.rs  _8_preemption.rs  abort.rs  alloc.rs  angle_meter.rs  exception.rs  fpu.rs  i2c_read_multi.rs  i2c_read_single.rs  interrupt.rs  itm.rs  led_compass_1.rs  led_compass_2.rs  led_compass_3.rs  led_roulette.rs  (+12 more)
src/peripheral/: btim.rs  dbgmcu.rs  gpio.rs  gptim.rs  i2c.rs  mod.rs  rcc.rs  spi.rs  tim.rs  usart.rs
viz/: Cargo.toml  README.md
viz/.cargo/: config
viz/src/: main.rs
