[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the STM32F3DISCOVERY"
documentation = "https://docs.rs/f3"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f3"
repository = "https://github.com/japaric/f3"
version = "0.5.3"

[dependencies]
l3gd20 = "0.1.2"
lsm303dlhc = "0.1.2"
stm32f30x-hal = "0.1.2"

[dev-dependencies]
aligned = "0.1.1"
cortex-m = "0.4.1"
cortex-m-rtfm = "0.3.1"
cortex-m-semihosting = "0.2.0"
madgwick = "0.1.0"

[dev-dependencies.byteorder]
default-features = false
version = "1.2.1"

[dev-dependencies.cast]
default-features = false
version = "0.2.2"

[dev-dependencies.cobs]
default-features = false
version = "0.1.3"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

[dev-dependencies.nb]
features = ["unstable"]
version = "0.1.1"

[dev-dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.1.1"

[features]
rt = ["stm32f30x-hal/rt"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true