[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the STM32F3DISCOVERY"
documentation = "https://docs.rs/f3"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "f3"
repository = "https://github.com/japaric/f3"
version = "0.6.2"

[dependencies]
embedded-hal = "0.2.3"
l3gd20 = "0.2.0"
lsm303dlhc = "0.2.0"

[dependencies.stm32f3xx-hal]
version = "0.3.0"
features = ["stm32f303"]

[dev-dependencies]
aligned = "0.3.1"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
madgwick = "0.1.1"
panic-semihosting = "0.5.2"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.2"

[dev-dependencies.cast]
default-features = false
version = "0.2.2"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.nb]
version = "0.1.1"

[features]
rt = ["stm32f3xx-hal/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
